vlib/v/checker/tests/match_undefined_cond.out
vlib/v/checker/tests/match_undefined_cond.vv:2:15: error: undefined ident: `asd`
    1 | fn main() {
    2 |     res := match asd {
      |                  ~~~
    3 |         1 { 'foo' }
    4 |         2 { 'test' }
vlib/v/checker/tests/match_undefined_cond.vv:3:3: error: cannot match `void` with `int literal`
    1 | fn main() {
    2 |     res := match asd {
    3 |         1 { 'foo' }
      |         ^
    4 |         2 { 'test' }
    5 |         else { '' }
vlib/v/checker/tests/match_undefined_cond.vv:4:3: error: cannot match `void` with `int literal`
    2 |     res := match asd {
    3 |         1 { 'foo' }
    4 |         2 { 'test' }
      |         ^
    5 |         else { '' }
    6 |     }
