vlib/v/checker/tests/match_undefined_cond.vv
fn main() {
	res := match asd {
		1 { 'foo' }
		2 { 'test' }
		else { '' }
	}
	_ = res
}
